Fix navigation on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -823,6 +823,7 @@ a.name {
 /* Navigation tablet/mobile */
 .navigation {
   display: none;
+  z-index: 20000;
 }
 .navigation__checkbox {
   display: none;
@@ -833,7 +834,7 @@ a.name {
   width: 7rem;
   position: fixed;
   top: 2%;
-  right: 5%;
+  right: 4%;
   border-radius: 50%;
   z-index: 2000;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
@@ -846,7 +847,7 @@ a.name {
   border-radius: 50%;
   position: fixed;
   top: 2.5%;
-  right: 5.5%;
+  right: 4.5%;
   background-image: radial-gradient(#e8d8be, #EC9006);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
@@ -1457,7 +1458,7 @@ a.name {
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  z-index: 1000;
+  z-index: 100;
 }
 @media (max-width: 840px) {
   .section-contact-footer {
