--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -170,6 +170,7 @@
 
 .navigation {
     display: none;
+    z-index: 20000;
 
     &__checkbox {
       display: none;
@@ -181,7 +182,7 @@
       width: 7rem;
       position: fixed;
       top: 2%;
-      right: 5%;
+      right: 4%;
       border-radius: 50%;
       z-index: 2000;
       box-shadow: 0 1rem 3rem rgba(#000, 0.1);
@@ -195,7 +196,7 @@
       border-radius: 50%;
       position: fixed;
       top: 2.5%;
-      right: 5.5%;
+      right: 4.5%;
       background-image: radial-gradient(
         $color-primary-light-orange,
         $color-primary-bright-orange
